java 8 and gradle read